fix bootstrap horizontal scrollbar issue

--- a/htmlSrc/static/css/xrguide.css
+++ b/htmlSrc/static/css/xrguide.css
@@ -12,3 +12,17 @@ footer{
     margin-top: 100px;
     border-top: 1px solid #555555;
 }
+.navbar{
+    margin: 0 -15px;
+}
+
+.container-fluid {
+    padding: 0 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.container {
+    max-width: 100%;
+    padding-right: 0;
+    padding-left: 0;
+}
